--- a/sda5708.yaml
+++ b/sda5708.yaml
@@ -53,6 +53,7 @@ display:
     clock_pin: GPIO13
     load_pin: GPIO12
     reset_pin: GPIO14
+    brightness: 5
     lambda: |-
       auto now = id(sntp_time).now();
       auto userText = id(display_text).state;
