--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 .pio
-.vscode/.browse.c_cpp.db*
-.vscode/c_cpp_properties.json
-.vscode/launch.json
-.vscode/ipch
-
-secrets.yaml
+.vscode
 .esphome
 **/__pycache__/
+
+secrets.yaml
